// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component have to match default button snapshot 1`] = `
<Button
  attributes="attributes"
  class="class"
  className="className"
  custom_element={Object {}}
  custom_method={[Function]}
  disabled="disabled"
  href={null}
  icon="question"
  icon_position="right"
  icon_size="icon_size"
  id="id"
  innerRef={Object {}}
  on_click="on_click"
  size={null}
  text="text"
  title="This is a button title"
  type="type"
  variant="primary"
>
  <button
    className="dnb-button dnb-button--primary dnb-button--icon-position-right dnb-button--has-text dnb-button--has-icon id class className"
    disabled="disabled"
    id="id"
    onClick={[Function]}
    onMouseOut={[Function]}
    title="This is a button title"
    type="type"
  >
    <Content
      attributes="attributes"
      class="class"
      className="className"
      content="children"
      custom_element={Object {}}
      custom_method={[Function]}
      disabled="disabled"
      href={null}
      icon="question"
      icon_position="right"
      icon_size="icon_size"
      id="id"
      innerRef={Object {}}
      isIconOnly={false}
      on_click="on_click"
      size={null}
      text="text"
      title="This is a button title"
      type="type"
      variant="primary"
    >
      children
      <span
        className="dnb-button__text"
        key="button-text"
      >
        text
      </span>
      <IconPrimary
        alt="This is a button title"
        aria-hidden={true}
        attributes={null}
        class={null}
        className="dnb-button__icon"
        color={null}
        height={null}
        icon="question"
        key="button-icon"
        modifier={null}
        size="icon_size"
        title={null}
        width={null}
      >
        <span
          alt="This is a button title"
          aria-hidden={true}
          className="dnb-icon dnb-button__icon"
          role="img"
        >
          <question>
            <svg
              fill="none"
              height={16}
              viewBox="0 0 16 16"
              width={16}
            >
              <path
                clipRule="evenodd"
                d="M4.352 5.1c0-2.05 1.55-3.6 3.6-3.6 2.052 0 3.601 1.55 3.601 3.6 0 2.051-1.55 3.6-3.6 3.6a.75.75 0 0 0-.75.75v2.666a.75.75 0 0 0 1.5 0V10.15c2.506-.348 4.35-2.425 4.35-5.049 0-2.879-2.22-5.1-5.1-5.1-2.88 0-5.1 2.221-5.1 5.1a.75.75 0 0 0 1.5 0zm3.6 10.898c.659 0 1.097-.439 1.097-1.097 0-.658-.438-1.096-1.096-1.096-.658 0-1.097.438-1.097 1.096 0 .658.439 1.097 1.097 1.097z"
                fill="#000"
                fillRule="evenodd"
              />
            </svg>
          </question>
        </span>
      </IconPrimary>
    </Content>
  </button>
</Button>
`;

exports[`Button component have to match href="..." snapshot 1`] = `
<Button
  attributes="attributes"
  class="class"
  className="className"
  custom_element={Object {}}
  custom_method={[Function]}
  disabled="disabled"
  href="https://url"
  icon="question"
  icon_position="right"
  icon_size="icon_size"
  id="id"
  innerRef={Object {}}
  on_click="on_click"
  size={null}
  text="text"
  title="This is a button title"
  type="type"
  variant="primary"
>
  <a
    className="dnb-button dnb-button--primary dnb-button--icon-position-right dnb-button--has-text dnb-button--has-icon id class className"
    disabled="disabled"
    href="https://url"
    id="id"
    onClick={[Function]}
    onMouseOut={[Function]}
    title="This is a button title"
    type="type"
  >
    <Content
      attributes="attributes"
      class="class"
      className="className"
      content="children"
      custom_element={Object {}}
      custom_method={[Function]}
      disabled="disabled"
      href="https://url"
      icon="question"
      icon_position="right"
      icon_size="icon_size"
      id="id"
      innerRef={Object {}}
      isIconOnly={false}
      on_click="on_click"
      size={null}
      text="text"
      title="This is a button title"
      type="type"
      variant="primary"
    >
      children
      <span
        className="dnb-button__text"
        key="button-text"
      >
        text
      </span>
      <IconPrimary
        alt="This is a button title"
        aria-hidden={true}
        attributes={null}
        class={null}
        className="dnb-button__icon"
        color={null}
        height={null}
        icon="question"
        key="button-icon"
        modifier={null}
        size="icon_size"
        title={null}
        width={null}
      >
        <span
          alt="This is a button title"
          aria-hidden={true}
          className="dnb-icon dnb-button__icon"
          role="img"
        >
          <question>
            <svg
              fill="none"
              height={16}
              viewBox="0 0 16 16"
              width={16}
            >
              <path
                clipRule="evenodd"
                d="M4.352 5.1c0-2.05 1.55-3.6 3.6-3.6 2.052 0 3.601 1.55 3.601 3.6 0 2.051-1.55 3.6-3.6 3.6a.75.75 0 0 0-.75.75v2.666a.75.75 0 0 0 1.5 0V10.15c2.506-.348 4.35-2.425 4.35-5.049 0-2.879-2.22-5.1-5.1-5.1-2.88 0-5.1 2.221-5.1 5.1a.75.75 0 0 0 1.5 0zm3.6 10.898c.659 0 1.097-.439 1.097-1.097 0-.658-.438-1.096-1.096-1.096-.658 0-1.097.438-1.097 1.096 0 .658.439 1.097 1.097 1.097z"
                fill="#000"
                fillRule="evenodd"
              />
            </svg>
          </question>
        </span>
      </IconPrimary>
    </Content>
  </a>
</Button>
`;

exports[`Button scss have to match default theme snapshot 1`] = `
"/*
* Button theme
*
*/
/**
 * This file is only used to make themes independent
 * so that they can get imported individually, without the core styles
 *
 */
/*
 * Utilities
 */
/*
* Button mixins
*
*/
:root {
  --button-border-width: 0px;
  /* stylelint-disable-line */ }

.dnb-button {
  border: none;
  box-shadow: none; }
  .dnb-button--secondary:not([disabled]):not(.dnb-button--has-text) .dnb-button__icon {
    color: var(--color-emerald-green); }

.dnb-button--primary {
  color: var(--color-white);
  background-color: var(--color-sea-green-alt); }
  :not([dnb-is-touch]) .dnb-button--primary:hover[disabled] {
    cursor: not-allowed; }
  :not([dnb-is-touch]) .dnb-button--primary:hover:not([disabled]) {
    color: var(--color-sea-green);
    background-color: var(--color-white);
    box-shadow: 0 0 0 1px var(--color-white), 0 0 0 3px var(--color-emerald-green); }
  :not([dnb-is-touch]) .dnb-button--primary:focus[disabled] {
    cursor: not-allowed; }
  :not([dnb-is-touch]) .dnb-button--primary:focus:not([disabled]) {
    color: var(--color-sea-green);
    background-color: var(--color-white);
    outline: none; }
    html[data-whatinput='keyboard'] :not([dnb-is-touch]) .dnb-button--primary:focus:not([disabled]) {
      box-shadow: inset 0 0 0 2px var(--color-emerald-green);
      border-color: transparent; }
  :not([dnb-is-touch]) .dnb-button--primary:active[disabled] {
    cursor: not-allowed; }
  :not([dnb-is-touch]) .dnb-button--primary:active:not([disabled]) {
    color: var(--color-sea-green);
    background-color: var(--color-mint-green-50);
    box-shadow: 0 0 0 1px transparent;
    border-color: transparent; }
  .dnb-button--primary[disabled] {
    color: var(--color-white);
    background-color: var(--color-sea-green-alt-30); }

.dnb-button--secondary {
  color: var(--color-sea-green);
  background-color: var(--color-white);
  box-shadow: inset 0 0 0 1px var(--color-sea-green-alt);
  border-color: transparent; }
  :not([dnb-is-touch]) .dnb-button--secondary:hover[disabled] {
    cursor: not-allowed; }
  :not([dnb-is-touch]) .dnb-button--secondary:hover:not([disabled]) {
    color: var(--color-sea-green);
    background-color: var(--color-white);
    box-shadow: 0 0 0 1px var(--color-white), 0 0 0 3px var(--color-emerald-green); }
  :not([dnb-is-touch]) .dnb-button--secondary:focus[disabled] {
    cursor: not-allowed; }
  :not([dnb-is-touch]) .dnb-button--secondary:focus:not([disabled]) {
    color: var(--color-sea-green);
    background-color: var(--color-white);
    outline: none; }
    html[data-whatinput='keyboard'] :not([dnb-is-touch]) .dnb-button--secondary:focus:not([disabled]) {
      box-shadow: inset 0 0 0 2px var(--color-emerald-green);
      border-color: transparent; }
  :not([dnb-is-touch]) .dnb-button--secondary:active[disabled] {
    cursor: not-allowed; }
  :not([dnb-is-touch]) .dnb-button--secondary:active:not([disabled]) {
    color: var(--color-sea-green);
    background-color: var(--color-mint-green-50);
    box-shadow: 0 0 0 1px transparent;
    border-color: transparent; }
  .dnb-button--secondary[disabled], .dnb-button--secondary[disabled]:focus {
    color: var(--color-sea-green-alt-30);
    background-color: var(--color-white);
    box-shadow: inset 0 0 0 1px var(--color-sea-green-alt-30);
    border-color: transparent; }

.dnb-button--tertiary {
  position: relative;
  z-index: 1;
  color: var(--color-sea-green);
  background-color: transparent; }
  .dnb-button--tertiary.dnb-button--has-text {
    padding-left: 1rem;
    padding-right: 1rem; }
    .dnb-button--tertiary.dnb-button--has-text:not([disabled]) .dnb-button__icon {
      margin: 0 calc(var(--button-icon-size) / 2); }
    .dnb-button--tertiary.dnb-button--has-text.dnb-button--icon-position-right {
      padding-right: 0.5rem; }
    .dnb-button--tertiary.dnb-button--has-text.dnb-button--icon-position-left {
      padding-left: 0.5rem; }
    .dnb-button--tertiary.dnb-button--has-text.dnb-button--icon-position-left .dnb-button__icon {
      margin-left: 0; }
    .dnb-button--tertiary.dnb-button--has-text.dnb-button--icon-position-right .dnb-button__icon {
      margin-right: 0; }
  :not([dnb-is-touch]) .dnb-button--tertiary.dnb-button--has-text:not(:focus):not([disabled]):hover[disabled] {
    cursor: not-allowed; }
  :not([dnb-is-touch]) .dnb-button--tertiary.dnb-button--has-text:not(:focus):not([disabled]):hover:not([disabled]) .dnb-button__text::after {
    content: '';
    position: absolute;
    z-index: 1;
    left: 0.05rem;
    right: 0.05rem;
    bottom: 0;
    width: auto;
    height: 1px;
    border-radius: 0.5px;
    border-bottom: 1px solid var(--color-sea-green);
    left: 0;
    right: 0;
    bottom: 0.5rem; }
  :not([dnb-is-touch]) .dnb-button--tertiary.dnb-button--has-text:not(:focus):not([disabled]):hover:not([disabled]).dnb-button--icon-position-left .dnb-button__text::after {
    left: calc(-0.5rem - var(--button-icon-size)); }
  :not([dnb-is-touch]) .dnb-button--tertiary.dnb-button--has-text:not(:focus):not([disabled]):hover:not([disabled]).dnb-button--icon-position-right .dnb-button__text::after {
    right: calc(-0.5rem - var(--button-icon-size)); }
  :not([dnb-is-touch]) .dnb-button--tertiary.dnb-button--has-icon:not(.dnb-button--has-text):hover[disabled] {
    cursor: not-allowed; }
  :not([dnb-is-touch]) .dnb-button--tertiary.dnb-button--has-icon:not(.dnb-button--has-text):hover:not([disabled]) .dnb-button__icon {
    color: var(--color-sea-green-alt-30); }
  .dnb-button--tertiary.dnb-button--has-text:not([disabled]):active::after {
    border-bottom: none; }
  :not([dnb-is-touch]) .dnb-button--tertiary:focus[disabled] {
    cursor: not-allowed; }
  :not([dnb-is-touch]) .dnb-button--tertiary:focus:not([disabled]) {
    color: var(--color-sea-green);
    background-color: transparent;
    outline: none; }
    html[data-whatinput='keyboard'] :not([dnb-is-touch]) .dnb-button--tertiary:focus:not([disabled]) {
      box-shadow: inset 0 0 0 2px var(--color-emerald-green);
      border-color: transparent; }
  .dnb-button--tertiary[disabled] {
    color: var(--color-sea-green-alt-30); }

.dnb-button--signal {
  color: var(--color-black);
  background-color: var(--color-signal-yellow); }
  :not([dnb-is-touch]) .dnb-button--signal:hover[disabled] {
    cursor: not-allowed; }
  :not([dnb-is-touch]) .dnb-button--signal:hover:not([disabled]) {
    color: var(--color-black);
    background-color: var(--color-signal-yellow);
    box-shadow: 0 0 0 1px var(--color-signal-yellow), 0 0 0 3px var(--color-emerald-green); }
  :not([dnb-is-touch]) .dnb-button--signal:focus[disabled] {
    cursor: not-allowed; }
  :not([dnb-is-touch]) .dnb-button--signal:focus:not([disabled]) {
    color: var(--color-black);
    background-color: var(--color-signal-yellow);
    outline: none; }
    html[data-whatinput='keyboard'] :not([dnb-is-touch]) .dnb-button--signal:focus:not([disabled]) {
      box-shadow: inset 0 0 0 2px var(--color-emerald-green);
      border-color: transparent; }
  :not([dnb-is-touch]) .dnb-button--signal:active[disabled] {
    cursor: not-allowed; }
  :not([dnb-is-touch]) .dnb-button--signal:active:not([disabled]) {
    color: var(--color-black);
    background-color: var(--color-signal-yellow);
    box-shadow: 0 0 0 1px transparent;
    border-color: transparent; }
  .dnb-button--signal[disabled] {
    color: var(--color-black-30);
    background-color: var(--color-signal-yellow-30); }
"
`;

exports[`Button scss have to match snapshot 1`] = `
"/*
* DNB Button
*
*/
/**
 * This file is only used to make components independent
 * so that they can get imported individually, without the core styles
 *
 */
/*
 * Utilities
 */
/*
 * CSS Properties
 *
 */
:root {
  --font-family-default: 'Fedra Sans Std', sans-serif;
  --font-family-book: 'Fedra Sans Std', sans-serif;
  /* Do not use, use --font-weight-... */
  --font-family-demi: 'Fedra Sans Std', sans-serif;
  /* Do not use, use --font-weight-... */
  --font-family-medium: 'Fedra Sans Std', sans-serif;
  /* Do not use, use --font-weight-... */
  --font-weight-default: normal;
  --font-weight-book: normal;
  --font-weight-demi: 500;
  --font-weight-medium: 600;
  --font-size-small: 0.875rem;
  --font-size-default: 1rem;
  --font-size-x-default: 1.25rem;
  --font-size-medium: 1.5rem;
  --font-size-large: 2rem;
  --font-size-xx-large: 3rem;
  --color-sea-green-alt: #008484;
  --color-mint-green-50: #d2f0e9;
  --color-mint-green-25: #e9f8f4;
  --color-mint-green-12: #f4fbf9;
  --color-sea-green-alt-30: #b3dada;
  --color-signal-yellow-30: #ffffd7;
  --color-cherry-red: #e10076;
  --color-cherry-red-80: #fdebf4;
  --color-black: #000;
  --color-black-80: #333;
  --color-black-30: #b3b3b3;
  --color-white: #fff;
  --color-black-border: #cdcdcd;
  --color-black-background: #fafafa;
  --color-sea-green: #007272;
  --color-mint-green: #a5e1d2;
  --color-summer-green: #28b482;
  --color-emerald-green: #14555a;
  --color-ocean-green: #00343e;
  --color-signal-orange: #ff5400;
  --color-signal-yellow: #ffff7a;
  --color-indigo: #23195a;
  --color-violet: #6e2382;
  --color-sky-blue: #4bbed2; }

/*
 * Typography
 *
 * The font-family properties are defined in the properties.scss file, like:
 * --font-family-default:
 *
 */
.dnb-typo-std,
.dnb-typo-book {
  font-family: var(--font-family-default);
  font-weight: normal;
  font-style: normal; }

.dnb-typo-medium {
  font-family: var(--font-family-default);
  font-weight: var(--font-weight-medium);
  font-style: normal; }

.dnb-typo-demi {
  font-family: var(--font-family-default);
  font-weight: var(--font-weight-demi);
  font-style: normal; }

.dnb-typo-number--lining {
  font-variant-numeric: lining-nums;
  font-feature-settings: \\"lnum\\"; }

.dnb-typo-number--tabular {
  font-variant-numeric: tabular-nums;
  font-feature-settings: \\"lnum\\"; }

.dnb-typo-number--oldstyle {
  font-variant-numeric: oldstyle-nums;
  font-feature-settings: \\"onum\\"; }

.dnb-typo-number--proportional {
  font-variant-numeric: proportional-nums;
  font-feature-settings: \\"pnum\\"; }

@font-face {
  font-family: 'Fedra Sans Std';
  src: url(\\"../../../../assets/fonts//FedraSansStd-Book.eot\\");
  src: url(\\"../../../../assets/fonts//FedraSansStd-Book.eot?#iefix\\") format(\\"embedded-opentype\\"), url(\\"../../../../assets/fonts//FedraSansStd-Book.woff2\\") format(\\"woff2\\"), url(\\"../../../../assets/fonts//FedraSansStd-Book.woff\\") format(\\"woff\\"), url(\\"../../../../assets/fonts//FedraSansStd-Book.ttf\\") format(\\"truetype\\");
  font-weight: normal;
  font-style: normal;
  font-display: fallback; }

@font-face {
  font-family: 'Fedra Sans Std';
  src: url(\\"../../../../assets/fonts//FedraSansStd-Demi.eot\\");
  src: url(\\"../../../../assets/fonts//FedraSansStd-Demi.eot?#iefix\\") format(\\"embedded-opentype\\"), url(\\"../../../../assets/fonts//FedraSansStd-Demi.woff2\\") format(\\"woff2\\"), url(\\"../../../../assets/fonts//FedraSansStd-Demi.woff\\") format(\\"woff\\"), url(\\"../../../../assets/fonts//FedraSansStd-Demi.ttf\\") format(\\"truetype\\");
  font-weight: 500;
  font-style: normal;
  font-display: fallback; }

@font-face {
  font-family: 'Fedra Sans Std';
  src: url(\\"../../../../assets/fonts//FedraSansStd-Medium.eot\\");
  src: url(\\"../../../../assets/fonts//FedraSansStd-Medium.eot?#iefix\\") format(\\"embedded-opentype\\"), url(\\"../../../../assets/fonts//FedraSansStd-Medium.woff2\\") format(\\"woff2\\"), url(\\"../../../../assets/fonts//FedraSansStd-Medium.woff\\") format(\\"woff\\"), url(\\"../../../../assets/fonts//FedraSansStd-Medium.ttf\\") format(\\"truetype\\");
  font-weight: 600;
  font-style: normal;
  font-display: fallback; }

/*
 * Scopes
 *
 */
/*
 * Document Reset
 *
 */
/*
* DNB icon
*
*/
/*
* Icon component
*
*/
.dnb-icon {
  display: inline-block;
  vertical-align: baseline;
  font-size: inherit;
  line-height: 1;
  width: 1em;
  height: 1em; }
  .dnb-icon img,
  .dnb-icon svg {
    width: inherit;
    height: inherit;
    vertical-align: middle; }
  .dnb-icon svg[width='100%'] {
    width: inherit; }
  .dnb-icon svg[height='100%'] {
    height: inherit; }
  .dnb-icon svg:not([fill]),
  .dnb-icon svg [fill] {
    fill: currentColor; }
  .dnb-icon svg [stroke] {
    stroke: currentColor; }
  .dnb-icon--small {
    width: 0.75rem;
    height: 0.75rem; }
  .dnb-icon--default {
    width: 1rem;
    height: 1rem; }
  .dnb-icon--medium {
    width: 1.5rem;
    height: 1.5rem; }
  .dnb-icon--large {
    width: 2rem;
    height: 2rem; }
  .dnb-icon--x-large {
    width: 2.5rem;
    height: 2.5rem; }
  .dnb-icon--xx-large {
    width: 3rem;
    height: 3rem; }
  .dnb-icon--custom-size {
    width: auto;
    height: auto; }

.dnb-button {
  /**
   * 1. Remove repeating backgrounds in all browsers (opinionated).
   * 2. Add border box sizing in all browsers (opinionated).
   */
  /**
   * 1. Add text decoration inheritance in all browsers (opinionated).
   * 2. Add vertical alignment inheritance in all browsers (opinionated).
   */
  /* Grouping content
   */
  /**
   * 1. Add the correct sizing in Firefox.
   * 2. Show the overflow in Edge and IE.
   */
  /**
   * Add the correct display in IE.
   */
  /**
   * Remove the list style on navigation lists in all browsers (opinionated).
   */
  /**
   * 1. Use the default monospace user interface font
   *    in all browsers (opinionated).
   * 2. Correct the odd \`em\` font sizing in all browsers.
   */
  /* Text-level semantics
   */
  /**
   * Remove the gray background on active links in IE 10.
   */
  /**
   * Add the correct text decoration in Edge, IE, Opera, and Safari.
   */
  /**
   * Add the correct font weight in Chrome, Edge, and Safari.
   */
  /**
   * 1. Use the default monospace user interface font
   *    in all browsers (opinionated).
   * 2. Correct the odd \`em\` font sizing in all browsers.
   */
  /*
   * Remove the text shadow on text selections in Firefox 61- (opinionated).
   * 1. Restore the coloring undone by defining the text shadow
   *    in all browsers (opinionated).
   */
  /* Embedded content
   */
  /*
   * Change the alignment on media elements in all browers (opinionated).
   */
  /**
   * Add the correct display in IE 9-.
   */
  /**
   * Add the correct display in iOS 4-7.
   */
  /**
   * Remove the border on images inside links in IE 10-.
   */
  /**
   * Change the fill color to match the text color in all browsers (opinionated).
   */
  /**
   * Hide the overflow in IE.
   */
  /* Tabular data
   */
  /**
   * Collapse border spacing in all browsers (opinionated).
   */
  /* Forms
   */
  /**
   * Inherit styling in all browsers (opinionated).
   */
  /**
   * Remove the margin in Safari.
   */
  /**
   * 1. Show the overflow in IE.
   * 2. Remove the inheritance of text transform in Edge, Firefox, and IE.
   */
  /**
   * Correct the inability to style clickable types in iOS and Safari.
   */
  /**
   * Correct the padding in Firefox.
   */
  /**
   * Show the overflow in Edge and IE.
   * 1. Safari did inherit the break-word from html root
   */
  /**
   * 1. Correct the text wrapping in Edge and IE.
   * 2. Correct the color inheritance from \`fieldset\` elements in IE.
   */
  /**
   * 1. Add the correct display in Edge and IE.
   * 2. Add the correct vertical alignment in Chrome, Firefox, and Opera.
   */
  /**
   * Remove the inheritance of text transform in Firefox.
   */
  /**
   * 1. Remove the margin in Firefox and Safari.
   * 2. Remove the default vertical scrollbar in IE.
   * 3. Change the resize direction on textareas in all browsers (opinionated).
   */
  /**
   * Remove the padding in IE 10-.
   */
  /**
   * 1. Correct the odd appearance in Chrome and Safari.
   * 2. Correct the outline style in Safari.
   */
  /**
   * Correct the cursor style of increment and decrement buttons in Safari.
   */
  /**
   * Correct the text style of placeholders in Chrome, Edge, and Safari.
   */
  /**
   * Remove the inner padding in Chrome and Safari on macOS.
   */
  /**
   * 1. Correct the inability to style clickable types in iOS and Safari.
   * 2. Change font properties to \`inherit\` in Safari.
   */
  /**
   * Remove the inner border and padding of focus outlines in Firefox.
   */
  /* Interactive
   */
  /*
   * Add the correct display in Edge and IE.
   */
  /*
   * Add the correct display in all browsers.
   */
  /* Scripting
   */
  /**
   * Add the correct display in IE 9-.
   */
  /**
   * Add the correct display in IE.
   */
  /* User interaction
   */
  /*
   * 1. Remove the tapping delay in IE 10.
   * 2. Remove the tapping delay on clickable elements
        in all browsers (opinionated).
   */
  /**
   * Add the correct display in IE 10-.
   */
  /* Accessibility
   */
  /**
   * Change the cursor on busy elements in all browsers (opinionated).
   */
  /*
   * Change the cursor on control elements in all browsers (opinionated).
   */
  /*
   * Change the cursor on disabled, not-editable, or otherwise
   * inoperable elements in all browsers (opinionated).
   */
  /*
   * Change the display on visually hidden accessible elements
   * in all browsers (opinionated).
   */
  font-family: sans-serif;
  font-family: var(--font-family-default);
  font-weight: var(--font-weight-default);
  font-size: 1rem;
  font-style: normal;
  line-height: 1.5rem;
  color: var(--color-black-80, #333);
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  font-variant-numeric: lining-nums;
  font-feature-settings: \\"lnum\\";
  font-size: 1em;
  line-height: 1.5em; }
  .dnb-button *,
  .dnb-button ::before,
  .dnb-button ::after {
    background-repeat: no-repeat;
    /* 1 */
    box-sizing: border-box;
    /* 2 */ }
  .dnb-button ::before,
  .dnb-button ::after {
    text-decoration: inherit;
    /* 1 */
    vertical-align: inherit;
    /* 2 */ }
  .dnb-button hr {
    height: 0;
    /* 1 */
    overflow: visible;
    /* 2 */ }
  .dnb-button main {
    display: block; }
  .dnb-button nav ol,
  .dnb-button nav ul {
    list-style: none; }
  .dnb-button pre {
    font-family: Menlo, Consolas, Roboto Mono, Ubuntu Monospace, Noto Mono, Oxygen Mono, Liberation Mono, monospace;
    /* 1 */
    font-size: 1em;
    /* 2 */ }
  .dnb-button a {
    background-color: transparent; }
  .dnb-button abbr[title] {
    text-decoration: underline;
    text-decoration: underline dotted; }
  .dnb-button b,
  .dnb-button strong {
    font-weight: bolder; }
  .dnb-button code,
  .dnb-button kbd,
  .dnb-button samp {
    font-family: Menlo, Consolas, Roboto Mono, Ubuntu Monospace, Noto Mono, Oxygen Mono, Liberation Mono, monospace;
    /* 1 */
    font-size: 1em;
    /* 2 */ }
  .dnb-button ::-moz-selection {
    background-color: #b3d4fc;
    /* 1 */
    color: #000;
    /* 1 */
    text-shadow: none; }
  .dnb-button audio,
  .dnb-button canvas,
  .dnb-button iframe,
  .dnb-button img,
  .dnb-button svg,
  .dnb-button video {
    vertical-align: middle; }
  .dnb-button audio,
  .dnb-button video {
    display: inline-block; }
  .dnb-button audio:not([controls]) {
    display: none;
    height: 0; }
  .dnb-button img {
    border-style: none; }
  .dnb-button svg:not([fill]) {
    fill: currentColor; }
  .dnb-button svg:not(:root) {
    overflow: hidden; }
  .dnb-button table {
    border-collapse: collapse; }
  .dnb-button button,
  .dnb-button input,
  .dnb-button select,
  .dnb-button textarea {
    font-family: inherit;
    font-size: inherit;
    line-height: inherit; }
  .dnb-button button,
  .dnb-button input,
  .dnb-button select {
    margin: 0; }
  .dnb-button button {
    overflow: visible;
    /* 1 */
    text-transform: none;
    /* 2 */ }
  .dnb-button button,
  .dnb-button [type='button'],
  .dnb-button [type='reset'],
  .dnb-button [type='submit'] {
    -webkit-appearance: button; }
  .dnb-button fieldset {
    padding: 0.35rem 0.75rem 0.625rem; }
  .dnb-button input {
    overflow: visible;
    word-break: normal;
    /* 1 */ }
  .dnb-button legend {
    color: inherit;
    /* 2 */
    display: table;
    /* 1 */
    max-width: 100%;
    /* 1 */
    white-space: normal;
    /* 1 */ }
  .dnb-button progress {
    display: inline-block;
    /* 1 */
    vertical-align: baseline;
    /* 2 */ }
  .dnb-button select {
    text-transform: none; }
  .dnb-button textarea {
    margin: 0;
    /* 1 */
    overflow: auto;
    /* 2 */
    resize: vertical;
    /* 3 */ }
  .dnb-button [type='checkbox'],
  .dnb-button [type='radio'] {
    padding: 0; }
  .dnb-button [type='search'] {
    -webkit-appearance: textfield;
    /* 1 */
    outline-offset: -2px;
    /* 2 */ }
  .dnb-button ::-webkit-inner-spin-button,
  .dnb-button ::-webkit-outer-spin-button {
    height: auto; }
  .dnb-button ::-webkit-input-placeholder {
    color: inherit;
    opacity: 0.54; }
  .dnb-button ::-webkit-search-decoration {
    -webkit-appearance: none; }
  .dnb-button ::-webkit-file-upload-button {
    -webkit-appearance: button;
    /* 1 */
    font: inherit;
    /* 2 */ }
  .dnb-button ::-moz-focus-inner {
    border-style: none;
    padding: 0; }
  .dnb-button details {
    display: block; }
  .dnb-button summary {
    display: list-item; }
  .dnb-button canvas {
    display: inline-block; }
  .dnb-button template {
    display: none; }
  .dnb-button a,
  .dnb-button area,
  .dnb-button button,
  .dnb-button input,
  .dnb-button label,
  .dnb-button select,
  .dnb-button summary,
  .dnb-button textarea,
  .dnb-button [tabindex] {
    -ms-touch-action: manipulation;
    /* 1 */
    touch-action: manipulation;
    /* 2 */ }
  .dnb-button [hidden] {
    display: none; }
  .dnb-button [aria-busy='true'] {
    cursor: progress; }
  .dnb-button [aria-controls] {
    cursor: pointer; }
  .dnb-button [aria-disabled='true'],
  .dnb-button [disabled] {
    cursor: not-allowed; }
  .dnb-button [aria-hidden='false'][hidden]:not(:focus) {
    clip: rect(0, 0, 0, 0);
    display: inherit;
    position: absolute; }
  @media print {
    .dnb-button {
      background-color: white; } }
  .dnb-button button {
    overflow: visible;
    text-transform: none; }
  .dnb-button button,
  .dnb-button [type='button'],
  .dnb-button [type='reset'],
  .dnb-button [type='submit'] {
    -webkit-appearance: button; }

/*
* Button component
*
*/
:root {
  --button-font-size: var(--font-size-default);
  --button-font-size-small: var(--font-size-small);
  --button-width: 2.5rem;
  --button-height: 2.5rem;
  --button-width--small: 1.5rem;
  --button-height--small: 1.5rem;
  --button-width--medium: 2rem;
  --button-height--medium: 2rem;
  --button-width--large: 3rem;
  --button-height--large: 3rem;
  --button-icon-size: 1rem;
  --button-border-width: 1px;
  --button-border-width--hover: 3px;
  --button-border-radius: calc(var(--button-height) / 2);
  --button-border-radius--small: calc(var(--button-height--small) / 2);
  --button-border-radius--medium: calc(var(--button-height--medium) / 2);
  --button-border-radius--large: calc(var(--button-height--large) / 2); }

.dnb-button {
  cursor: pointer;
  white-space: nowrap;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  width: var(--button-width);
  height: var(--button-height);
  padding: 0;
  border: var(--button-border-width) solid transparent;
  border-radius: var(--button-border-radius);
  font-size: var(--button-font-size);
  line-height: var(--button-height);
  text-decoration: none;
  /* Firefox includes a hidden border which messes up button dimensions */ }
  .dnb-button__icon {
    line-height: 1; }
    .dnb-button__icon:not(.dnb-icon) svg:not([width]):not([height]) {
      width: var(--button-icon-size);
      height: var(--button-icon-size); }
    @supports not (-ms-ime-align: auto) {
      .dnb-button__icon {
        transform: translateY(calc(1px - 1px - var(--button-border-width))); } }
  .dnb-button__text {
    color: inherit; }
    @supports not (-ms-ime-align: auto) {
      .dnb-button__text {
        transform: translateY(calc(1px - var(--button-border-width))); } }
  .dnb-button--size-small {
    width: var(--button-width--small);
    height: var(--button-height--small);
    font-size: var(--button-font-size-small);
    line-height: var(--button-font-size-small);
    border-radius: var(--button-border-radius--small); }
  .dnb-button--has-text.dnb-button--size-small {
    padding-left: 1rem;
    padding-right: 1rem; }
  .dnb-button--has-text.dnb-button--icon-position-left.dnb-button--size-small {
    padding-left: 0.5rem; }
  .dnb-button--has-text.dnb-button--icon-position-right.dnb-button--size-small {
    padding-right: 0.5rem; }
  .dnb-button--size-medium {
    width: var(--button-width--medium);
    height: var(--button-height--medium);
    line-height: var(--button-height--medium);
    border-radius: var(--button-border-radius--medium); }
  .dnb-button--has-text.dnb-button--size-medium {
    padding-left: 1rem;
    padding-right: 1rem; }
  .dnb-button--has-text.dnb-button--icon-position-left.dnb-button--size-medium {
    padding-left: 0.5rem; }
  .dnb-button--has-text.dnb-button--icon-position-right.dnb-button--size-medium {
    padding-right: 0.5rem; }
  .dnb-button--size-large {
    width: var(--button-width--large);
    height: var(--button-height--large);
    line-height: var(--button-height--large);
    border-radius: var(--button-border-radius--large); }
  .dnb-button--has-text.dnb-button--size-large {
    padding-left: 2rem;
    padding-right: 2rem; }
  .dnb-button--has-text.dnb-button--icon-position-left.dnb-button--size-large {
    padding-left: 1rem; }
  .dnb-button--has-text.dnb-button--icon-position-right.dnb-button--size-large {
    padding-right: 1rem; }
  .dnb-button--has-text {
    padding-left: 1.5rem;
    padding-right: 1.5rem;
    width: auto; }
  .dnb-button--has-text .dnb-button__icon {
    margin: 0 calc(var(--button-icon-size) / 2); }
  .dnb-button--has-text.dnb-button--icon-position-left {
    padding-left: 0.5rem; }
  .dnb-button--has-text.dnb-button--icon-position-right {
    padding-right: 0.5rem; }
  .dnb-button--has-text.dnb-button--has-icon .dnb-button__icon {
    order: 2; }
  .dnb-button--has-text.dnb-button--has-icon .dnb-button__text {
    order: 1; }
  .dnb-button--has-text.dnb-button--has-icon.dnb-button--icon-position-left .dnb-button__icon {
    order: 1; }
  .dnb-button--has-text.dnb-button--has-icon.dnb-button--icon-position-left .dnb-button__text {
    order: 2; }
  .dnb-button--reset {
    margin: 0;
    padding: 0;
    width: auto;
    height: auto;
    overflow: visible;
    border: none;
    border-radius: 0;
    background-color: transparent;
    appearance: none;
    box-shadow: none;
    color: inherit;
    font: inherit;
    text-align: inherit;
    line-height: inherit; }
    :not([dnb-is-touch]) .dnb-button--reset:hover[disabled] {
      cursor: not-allowed; }
    :not([dnb-is-touch]) .dnb-button--reset:hover:not([disabled]) {
      box-shadow: none;
      border: none; }
    .dnb-button--reset:not([disabled]):focus, .dnb-button--reset:not([disabled]):active {
      outline: none; }
      html[data-whatinput='keyboard'] .dnb-button--reset:not([disabled]):focus, html[data-whatinput='keyboard'] .dnb-button--reset:not([disabled]):active {
        box-shadow: 0 0 0 2px var(--color-emerald-green);
        border-color: transparent; }
    html[data-whatinput='mouse'] .dnb-button--reset:not([disabled]):focus,
    html[data-whatinput='mouse'] .dnb-button--reset:not([disabled]):active {
      box-shadow: none;
      color: inherit;
      border: none; }
  .dnb-button[type='button'] {
    appearance: none; }
  .dnb-button[disabled] {
    cursor: not-allowed; }
  button.dnb-button::-moz-focus-inner .dnb-button {
    border: none; }

a.dnb-button {
  -webkit-appearance: none; }
  a.dnb-button .dnb-button__icon {
    transform: translateY(0); }
  a.dnb-button .dnb-button__text {
    transform: translateY(1px); }
  a.dnb-button:hover {
    border-radius: var(--button-border-radius); }
  a.dnb-button--size-small, a.dnb-button--size-small:hover {
    border-radius: var(--button-border-radius--small); }
  a.dnb-button--size-medium, a.dnb-button--size-medium:hover {
    border-radius: var(--button-border-radius--medium); }
  a.dnb-button--size-large, a.dnb-button--size-large:hover {
    border-radius: var(--button-border-radius--large); }
  a.dnb-button:active, a.dnb-button:focus {
    border-radius: var(--button-border-radius); }
"
`;
